text input field is too short for text in issue page. fixes #7

--- a/sass/partials/_formalize.scss
+++ b/sass/partials/_formalize.scss
@@ -178,6 +178,9 @@ input[type="week"] {
   .box & {
     border: 1px solid #DDD;
   }
+  fieldset#filters td.values & {
+    height: 1.8em;
+  }
 }
 
 button[disabled],
